--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-  "brain-games": "bin/brain-games.js"
-},
+    "brain-games": "bin/brain-games.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DiLavr/backend-project-lvl1.git"
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/DiLavr/backend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/DiLavr/backend-project-lvl1#readme"
+  "homepage": "https://github.com/DiLavr/backend-project-lvl1#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
